--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,43 @@
-dj-database-url==0.5.0
+asn1crypto==0.24.0
+attrs==17.4.0
+Automat==0.6.0
+certifi==2018.1.18
+cffi==1.11.5
+chardet==3.0.4
+constantly==15.1.0
+cryptography==2.2.2
+cssselect==1.0.3
 dj-static==0.0.6
 Django==2.0.4
 django-bootstrap4==0.0.6
 gunicorn==19.7.1
+hyperlink==18.0.0
+idna==2.6
+incremental==17.5.0
+lxml==4.2.1
+mysqlclient==1.3.12
+parsel==1.4.0
 psycopg2==2.7.4
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycparser==2.18
+PyDispatcher==2.0.5
+PyMySQL==0.8.0
+pyOpenSSL==17.5.0
+python-dateutil==2.7.2
+python-scrapyd-api==2.1.2
 pytz==2018.3
+queuelib==1.5.0
+requests==2.18.4
+Scrapy==1.5.0
+scrapy-djangoitem==1.1.1
+scrapyd==1.2.0
+scrapyd-client==1.1.0
+service-identity==17.0.0
+six==1.11.0
 static3==0.7.0
+Twisted==17.9.0
+unicodecsv==0.14.1
+urllib3==1.22
+w3lib==1.19.0
+zope.interface==4.4.3
